feat: Add preview feature to piece history
